# agri-uav-optimal-control

./: README.md  pyproject.toml
configs/: demo.yaml
docs/: roadmap.md
examples/: run_demo.py
scenarios/: orchard_demo.json
src/agri_uav_optimal_control/: __init__.py  envs.py  metrics.py  planner.py  visualization.py
tests/: test_metrics.py
